--- a/src/main/resources/com/example/syshealthfx/index-admin.fxml
+++ b/src/main/resources/com/example/syshealthfx/index-admin.fxml
@@ -15,11 +15,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="frameAdmin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.syshealthfx.UsersController">
    <children>
       <VBox prefHeight="650.0" prefWidth="215.0" styleClass="vbox-buttons">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="111.0" prefWidth="223.0" text="NOMBRE INSTITUCION" textAlignment="CENTER">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="111.0" prefWidth="223.0" text="NOMBRE HOLA" textAlignment="CENTER">
                <font>
                   <Font name="Arial Rounded MT Bold" size="12.0" />
                </font>
@@ -31,7 +31,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="222.0" styleClass="btn-aside" text="USUARIOS" />
+                  <Button fx:id="usuario" mnemonicParsing="false" onAction="#removerElementos" prefHeight="35.0" prefWidth="222.0" styleClass="btn-aside" text="USUARIOS" />
                   <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="228.0" styleClass="btn-aside" text="PACIENTES" />
                   <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="240.0" styleClass="btn-aside" text="DEPARTAMENTOS" />
                   <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="223.0" styleClass="btn-aside" text="LABORATORIO" />
@@ -41,7 +41,7 @@
             </VBox>
          </children>
       </VBox>
-      <VBox alignment="BASELINE_CENTER" layoutX="217.0" prefHeight="650.0" prefWidth="1063.0" spacing="10.0" styleClass="main-index">
+      <VBox fx:id="contenidoInicio" alignment="BASELINE_CENTER" layoutX="217.0" prefHeight="650.0" prefWidth="1063.0" spacing="10.0" styleClass="main-index">
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0" styleClass="pane-index">
                <children>
@@ -66,7 +66,7 @@
                      <children>
                         <ImageView fitHeight="111.0" fitWidth="100.0">
                            <image>
-                              <Image url="@../assets/registro-en-linea.png" />
+                              <Image url="@assets/registro-en-linea.png" />
                            </image>
                         </ImageView>
                         <Label alignment="BASELINE_CENTER" contentDisplay="CENTER" prefHeight="181.0" prefWidth="513.0" text="REGISTRAR USUARIO">
@@ -80,7 +80,7 @@
                      <children>
                         <ImageView fitHeight="76.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../assets/edificio-del-hospital.png" />
+                              <Image url="@assets/edificio-del-hospital.png" />
                            </image>
                         </ImageView>
                         <Label prefHeight="119.0" prefWidth="205.0" text="ASIGNAR DEPARTAMENTO">
@@ -94,7 +94,7 @@
                      <children>
                         <ImageView fitHeight="117.0" fitWidth="97.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../assets/doctor.png" />
+                              <Image url="@assets/doctor.png" />
                            </image>
                         </ImageView>
                         <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="35.0" prefWidth="199.0" text="BUSCAR MÉDICO" />
@@ -104,7 +104,7 @@
                      <children>
                         <ImageView fitHeight="97.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../assets/examen.png" />
+                              <Image url="@assets/examen.png" />
                            </image>
                         </ImageView>
                         <Label alignment="CENTER" prefHeight="35.0" prefWidth="199.0" text="BUSCAR PACIENTE" />
@@ -120,6 +120,6 @@
    </children>
    <stylesheets>
       <URL value="@styles.css" />
-      <URL value="@../styles.css" />
+      <URL value="@styles.css" />
    </stylesheets>
 </AnchorPane>
