--- a/src/main/resources/com/example/syshealthfx/pacientes-admin.fxml
+++ b/src/main/resources/com/example/syshealthfx/pacientes-admin.fxml
@@ -4,14 +4,14 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1280.0" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1280.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox prefHeight="650.0" prefWidth="215.0" styleClass="vbox-buttons">
          <children>
@@ -27,7 +27,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="222.0" styleClass="btn-aside" text="USUARIOS" />
+                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="222.0" styleClass="btn-aside" text="USUARIOS" fx:id="usuarios"/>
                   <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="228.0" styleClass="btn-aside" text="PACIENTES" />
                   <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="240.0" styleClass="btn-aside" text="DEPARTAMENTOS" />
                   <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="223.0" styleClass="btn-aside" text="LABORATORIO" />
@@ -41,7 +41,7 @@
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0" styleClass="pane-index">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="100.0" prefWidth="1033.0" text="USUARIOS" textAlignment="CENTER">
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="100.0" prefWidth="1033.0" text="CITAS" textAlignment="CENTER">
                      <font>
                         <Font name="Cascadia Code Regular" size="30.0" />
                      </font>
@@ -50,27 +50,28 @@
             </HBox>
             <HBox prefHeight="91.0" prefWidth="1033.0" spacing="20.0">
                <children>
-                  <HBox prefHeight="91.0" prefWidth="143.0" styleClass="panel-acceso">
+                  <HBox prefHeight="91.0" prefWidth="215.0" styleClass="panel-acceso">
                      <children>
-                        <Label text="BUSCAR" />
-                     </children></HBox>
-                  <HBox prefHeight="91.0" prefWidth="159.0" styleClass="panel-acceso">
+                        <ImageView fitHeight="62.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@assets/agregar-archivo.png" />
+                           </image>
+                        </ImageView>
+                        <Label prefHeight="35.0" prefWidth="121.0" text="NUEVA CITA" />
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="91.0" prefWidth="245.0" styleClass="panel-acceso">
                      <children>
-                        <Label text="AGREGAR" />
-                     </children></HBox>
+                        <ImageView fitHeight="62.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@assets/editar.png" />
+                           </image>
+                        </ImageView>
+                        <Label prefHeight="35.0" prefWidth="158.0" text="MODIFICAR CITA" />
+                     </children>
+                  </HBox>
                </children>
             </HBox>
-            <TableView prefHeight="15.0" prefWidth="1033.0" styleClass="table-design">
-              <columns>
-                <TableColumn prefWidth="504.0000203847885" text="ID" />
-                <TableColumn prefWidth="527.3332824707031" text="USUARIO" />
-                  <TableColumn prefWidth="527.3332824707031" text="CONTRASEÑA" />
-                  <TableColumn prefWidth="527.3332824707031" text="ROL" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
          </children>
          <padding>
             <Insets left="15.0" right="15.0" />
