--- a/src/main/resources/com/example/syshealthfx/usuarios-admin.fxml
+++ b/src/main/resources/com/example/syshealthfx/usuarios-admin.fxml
@@ -4,14 +4,12 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1280.0" stylesheets="@../styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="frameAdmin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1280.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.syshealthfx.UsersController">
    <children>
       <VBox prefHeight="650.0" prefWidth="215.0" styleClass="vbox-buttons">
          <children>
@@ -37,11 +35,11 @@
             </VBox>
          </children>
       </VBox>
-      <VBox alignment="BASELINE_CENTER" layoutX="202.0" prefHeight="650.0" prefWidth="1063.0" spacing="10.0" styleClass="main-index">
+      <VBox fx:id="contenidoInicio" alignment="BASELINE_CENTER" layoutX="202.0" prefHeight="650.0" prefWidth="1063.0" spacing="10.0" styleClass="main-index">
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0" styleClass="pane-index">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="100.0" prefWidth="1033.0" text="CITAS" textAlignment="CENTER">
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="100.0" prefWidth="1033.0" text="USUARIOS" textAlignment="CENTER">
                      <font>
                         <Font name="Cascadia Code Regular" size="30.0" />
                      </font>
@@ -50,26 +48,14 @@
             </HBox>
             <HBox prefHeight="91.0" prefWidth="1033.0" spacing="20.0">
                <children>
-                  <HBox prefHeight="91.0" prefWidth="215.0" styleClass="panel-acceso">
+                  <HBox prefHeight="91.0" prefWidth="143.0" styleClass="panel-acceso">
                      <children>
-                        <ImageView fitHeight="62.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../assets/agregar-archivo.png" />
-                           </image>
-                        </ImageView>
-                        <Label prefHeight="35.0" prefWidth="121.0" text="NUEVA CITA" />
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="91.0" prefWidth="245.0" styleClass="panel-acceso">
+                        <Label text="BUSCAR" />
+                     </children></HBox>
+                  <HBox prefHeight="91.0" prefWidth="159.0" styleClass="panel-acceso">
                      <children>
-                        <ImageView fitHeight="62.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../assets/editar.png" />
-                           </image>
-                        </ImageView>
-                        <Label prefHeight="35.0" prefWidth="158.0" text="MODIFICAR CITA" />
-                     </children>
-                  </HBox>
+                        <Label text="AGREGAR" />
+                     </children></HBox>
                </children>
             </HBox>
          </children>
