--- a/src/main/resources/com/example/syshealthfx/index-admin.fxml
+++ b/src/main/resources/com/example/syshealthfx/index-admin.fxml
@@ -17,106 +17,110 @@
 
 <AnchorPane fx:id="frameAdmin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.syshealthfx.UsersController">
    <children>
-      <VBox prefHeight="650.0" prefWidth="215.0" styleClass="vbox-buttons">
+      <HBox fx:id="contenidoHBox" prefHeight="650.0" prefWidth="1280.0">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="111.0" prefWidth="223.0" text="NOMBRE HOLA" textAlignment="CENTER">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="12.0" />
-               </font>
-            </Label>
-            <VBox alignment="TOP_CENTER" prefHeight="543.0" prefWidth="215.0" spacing="15.0">
+            <VBox fx:id="buttonsMenu" prefHeight="650.0" prefWidth="215.0" styleClass="vbox-buttons">
                <children>
-                  <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="228.0" style="-fx-alignment: left;" styleClass="btn-aside" text="INICIO">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </Button>
-                  <Button fx:id="usuario" mnemonicParsing="false" onAction="#removerElementos" prefHeight="35.0" prefWidth="222.0" styleClass="btn-aside" text="USUARIOS" />
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="228.0" styleClass="btn-aside" text="PACIENTES" />
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="240.0" styleClass="btn-aside" text="DEPARTAMENTOS" />
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="223.0" styleClass="btn-aside" text="LABORATORIO" />
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="229.0" styleClass="btn-aside" text="CITAS" />
-                  <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="230.0" styleClass="btn-aside-cerrar" text="CERRAR SESIÓN" />
-               </children>
-            </VBox>
-         </children>
-      </VBox>
-      <VBox fx:id="contenidoInicio" alignment="BASELINE_CENTER" layoutX="217.0" prefHeight="650.0" prefWidth="1063.0" spacing="10.0" styleClass="main-index">
-         <children>
-            <HBox prefHeight="100.0" prefWidth="200.0" styleClass="pane-index">
-               <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="100.0" prefWidth="738.0" text="BIENVENIDO:  ADMINISTRADOR" textAlignment="CENTER">
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="111.0" prefWidth="223.0" text="NOMBRE HOLA" textAlignment="CENTER">
                      <font>
-                        <Font name="Cascadia Code Regular" size="30.0" />
+                        <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Label>
+                  <VBox alignment="TOP_CENTER" prefHeight="543.0" prefWidth="215.0" spacing="15.0">
+                     <children>
+                        <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="228.0" style="-fx-alignment: left;" styleClass="btn-aside" text="INICIO">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
+                        <Button fx:id="usuario" mnemonicParsing="false" onAction="#removerElementos" prefHeight="35.0" prefWidth="222.0" styleClass="btn-aside" text="USUARIOS" />
+                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="228.0" styleClass="btn-aside" text="PACIENTES" />
+                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="240.0" styleClass="btn-aside" text="DEPARTAMENTOS" />
+                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="223.0" styleClass="btn-aside" text="LABORATORIO" />
+                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="229.0" styleClass="btn-aside" text="CITAS" />
+                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="230.0" styleClass="btn-aside-cerrar" text="CERRAR SESIÓN" />
+                     </children>
+                  </VBox>
                </children>
-            </HBox>
-            <GridPane hgap="30.0" prefHeight="543.0" prefWidth="1054.0" styleClass="panel-acceso-container" vgap="20.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            </VBox>
+            <VBox fx:id="contenidoInicio" alignment="BASELINE_CENTER" prefHeight="650.0" prefWidth="1069.0" spacing="10.0" styleClass="main-index">
                <children>
-                  <HBox alignment="CENTER" prefHeight="181.0" prefWidth="441.0" styleClass="panel-acceso">
+                  <HBox prefHeight="98.0" prefWidth="1059.0" styleClass="pane-index">
                      <children>
-                        <ImageView fitHeight="111.0" fitWidth="100.0">
-                           <image>
-                              <Image url="@assets/registro-en-linea.png" />
-                           </image>
-                        </ImageView>
-                        <Label alignment="BASELINE_CENTER" contentDisplay="CENTER" prefHeight="181.0" prefWidth="513.0" text="REGISTRAR USUARIO">
+                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="97.0" prefWidth="1037.0" text="BIENVENIDO:  ADMINISTRADOR" textAlignment="CENTER">
                            <font>
-                              <Font name="Cascadia Code Regular" size="12.0" />
+                              <Font name="Cascadia Code Regular" size="30.0" />
                            </font>
                         </Label>
                      </children>
                   </HBox>
-                  <HBox prefHeight="100.0" prefWidth="200.0" styleClass="panel-acceso" GridPane.columnIndex="1">
+                  <GridPane hgap="30.0" prefHeight="543.0" prefWidth="1054.0" styleClass="panel-acceso-container" vgap="20.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
                      <children>
-                        <ImageView fitHeight="76.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@assets/edificio-del-hospital.png" />
-                           </image>
-                        </ImageView>
-                        <Label prefHeight="119.0" prefWidth="205.0" text="ASIGNAR DEPARTAMENTO">
-                           <font>
-                              <Font size="1.0" />
-                           </font>
-                        </Label>
+                        <HBox alignment="CENTER" prefHeight="181.0" prefWidth="441.0" styleClass="panel-acceso">
+                           <children>
+                              <ImageView fitHeight="111.0" fitWidth="100.0">
+                                 <image>
+                                    <Image url="@assets/registro-en-linea.png" />
+                                 </image>
+                              </ImageView>
+                              <Label alignment="BASELINE_CENTER" contentDisplay="CENTER" prefHeight="181.0" prefWidth="513.0" text="REGISTRAR USUARIO">
+                                 <font>
+                                    <Font name="Cascadia Code Regular" size="12.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0" styleClass="panel-acceso" GridPane.columnIndex="1">
+                           <children>
+                              <ImageView fitHeight="76.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@assets/edificio-del-hospital.png" />
+                                 </image>
+                              </ImageView>
+                              <Label prefHeight="119.0" prefWidth="205.0" text="ASIGNAR DEPARTAMENTO">
+                                 <font>
+                                    <Font size="1.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="100.0" prefWidth="200.0" styleClass="panel-acceso" GridPane.rowIndex="1">
+                           <children>
+                              <ImageView fitHeight="117.0" fitWidth="97.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@assets/doctor.png" />
+                                 </image>
+                              </ImageView>
+                              <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="35.0" prefWidth="199.0" text="BUSCAR MÉDICO" />
+                           </children>
+                        </HBox>
+                        <HBox prefHeight="226.0" prefWidth="507.0" styleClass="panel-acceso" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <children>
+                              <ImageView fitHeight="97.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@assets/examen.png" />
+                                 </image>
+                              </ImageView>
+                              <Label alignment="CENTER" prefHeight="35.0" prefWidth="199.0" text="BUSCAR PACIENTE" />
+                           </children>
+                        </HBox>
                      </children>
-                  </HBox>
-                  <HBox prefHeight="100.0" prefWidth="200.0" styleClass="panel-acceso" GridPane.rowIndex="1">
-                     <children>
-                        <ImageView fitHeight="117.0" fitWidth="97.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@assets/doctor.png" />
-                           </image>
-                        </ImageView>
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="35.0" prefWidth="199.0" text="BUSCAR MÉDICO" />
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="226.0" prefWidth="507.0" styleClass="panel-acceso" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <children>
-                        <ImageView fitHeight="97.0" fitWidth="98.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@assets/examen.png" />
-                           </image>
-                        </ImageView>
-                        <Label alignment="CENTER" prefHeight="35.0" prefWidth="199.0" text="BUSCAR PACIENTE" />
-                     </children>
-                  </HBox>
+                  </GridPane>
                </children>
-            </GridPane>
+               <padding>
+                  <Insets left="15.0" right="15.0" />
+               </padding>
+            </VBox>
          </children>
-         <padding>
-            <Insets left="15.0" right="15.0" />
-         </padding>
-      </VBox>
+      </HBox>
    </children>
    <stylesheets>
       <URL value="@styles.css" />
