--- a/src/main/resources/com/example/syshealthfx/registro-usuario.fxml
+++ b/src/main/resources/com/example/syshealthfx/registro-usuario.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -15,8 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="424.0" prefWidth="619.0" styleClass="formulario1" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.syshealthfx.UsersController">
+<AnchorPane fx:id="frame" prefHeight="424.0" prefWidth="619.0" styleClass="formulario1" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.syshealthfx.RegistroController">
    <children>
       <VBox prefHeight="424.0" prefWidth="619.0">
          <children>
@@ -30,50 +28,45 @@
                </children>
             </HBox>
             <GridPane hgap="10.0" prefHeight="193.0" prefWidth="600.0" style="-fx-padding: 10px;" vgap="10.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
                   <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
                         <Label text="NOMBRE(S)" />
-                        <TextField />
+                        <TextField fx:id="txtNombre" />
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
                      <children>
                         <Label text="APELLIDO MATERNO" />
-                        <TextField />
+                        <TextField fx:id="txtApellidoA" />
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2">
                      <children>
                         <Label text="APELLIDO PATERNO" />
-                        <TextField />
+                        <TextField fx:id="txtApellidoP" />
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0" GridPane.rowIndex="1">
                      <children>
-                        <Label text="GENERO" />
-                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="12.0">
-                           <children>
-                              <RadioButton mnemonicParsing="false" prefHeight="17.0" prefWidth="100.0" text="MASCULINO" />
-                              <RadioButton mnemonicParsing="false" prefHeight="17.0" prefWidth="90.0" text="FEMENINO" />
-                           </children>
-                        </HBox>
+                        <Label id="rbntGenero" text="GENERO" />
+                        <HBox id="rbtnGenero" prefHeight="100.0" prefWidth="200.0" spacing="12.0" />
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <children>
                         <Label text="FECHA DE NACIMIENTO" />
-                        <DatePicker />
+                        <DatePicker promptText="DD/MM/YYYY" />
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
@@ -101,23 +94,21 @@
                   <HBox alignment="CENTER_LEFT" prefHeight="39.0" prefWidth="600.0" spacing="10.0">
                      <children>
                         <Label text="NOMBRE DE USUARIO: " />
-                        <TextField />
-                        <Button mnemonicParsing="false" text="GENERAR USUARIO" />
+                        <TextField fx:id="txtUsuario" />
+                        <Button fx:id="generarUsuario" mnemonicParsing="false" onAction="#generarUsuario" text="GENERAR USUARIO" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="47.0" prefWidth="600.0" spacing="10.0">
                      <children>
                         <Label text="CONTRASEÑA:" />
-                        <TextField />
-                        <Button mnemonicParsing="false" text="GENERAR CONTRASEÑA" />
+                        <TextField fx:id="txtPassword" />
+                        <Button fx:id="generarPassword" mnemonicParsing="false" onAction="#generarPass" text="GENERAR CONTRASEÑA" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER" prefHeight="33.0" prefWidth="600.0" spacing="10.0">
                      <children>
                         <Label text="SELECCIONAR ROL: " />
-                        <RadioButton mnemonicParsing="false" text="RECEPCION" />
-                        <RadioButton mnemonicParsing="false" text="MEDICO" />
-                        <RadioButton mnemonicParsing="false" text="ADMINISTRADOR" />
+                        <HBox id="rbtnRol" prefHeight="29.0" prefWidth="341.0" />
                      </children>
                   </HBox>
                </children>
@@ -128,8 +119,8 @@
             <HBox alignment="CENTER" prefHeight="63.0" prefWidth="600.0" spacing="10.0">
                <children>
                   <Button mnemonicParsing="false" text="CREAR USUARIO" />
-                  <Button mnemonicParsing="false" text="VACIAR" />
-                  <Button mnemonicParsing="false" text="CANCELAR" />
+                  <Button fx:id="vaciar" mnemonicParsing="false" onAction="#vaciarFormulario" text="VACIAR" />
+                  <Button mnemonicParsing="false" onAction="#cerrarVentana" text="CANCELAR" />
                </children>
             </HBox>
          </children>
