CORRIGIENDO BUGS GENERADO PRIMER PDF

--- a/src/main/resources/com/example/syshealthfx/registro-usuario.fxml
+++ b/src/main/resources/com/example/syshealthfx/registro-usuario.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -14,26 +13,33 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="frame" prefHeight="424.0" prefWidth="619.0" styleClass="formulario1" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.syshealthfx.RegistroController">
+<AnchorPane fx:id="frame" prefHeight="534.0" prefWidth="721.0" styleClass="formulario1" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.syshealthfx.RegistroController">
    <children>
-      <VBox prefHeight="424.0" prefWidth="619.0">
+      <VBox prefHeight="534.0" prefWidth="721.0">
          <children>
             <HBox alignment="CENTER" prefHeight="46.0" prefWidth="600.0" style="-fx-border-color: transparent transparent #cacaca transparent; -fx-border-width: 2px; -fx-background-color: #003FF6;">
                <children>
-                  <Label style="-fx-font-weight: bold;" styleClass="titulo" text="REGISTRAR USUARIO" textFill="WHITE">
+                  <Label prefHeight="36.0" prefWidth="198.0" style="-fx-font-weight: bold;" styleClass="titulo" text="REGISTRAR EMPLEADO" textFill="WHITE">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <GridPane hgap="10.0" prefHeight="193.0" prefWidth="600.0" style="-fx-padding: 10px;" vgap="10.0">
+            <HBox alignment="CENTER" prefHeight="73.0" prefWidth="619.0" spacing="10.0">
+               <children>
+                  <Label text="SELECCIONAR ROL: " />
+                  <HBox id="rbtnRol" prefHeight="29.0" prefWidth="341.0" />
+               </children>
+            </HBox>
+            <GridPane hgap="15.0" prefHeight="297.0" prefWidth="699.0" style="-fx-padding: 10px;" vgap="15.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                </columnConstraints>
                <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -47,13 +53,13 @@
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
                      <children>
-                        <Label text="APELLIDO MATERNO" />
+                        <Label text="APELLIDO PATERNO" />
                         <TextField fx:id="txtApellidoA" />
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2">
                      <children>
-                        <Label text="APELLIDO PATERNO" />
+                        <Label text="APELLIDO MATERNO" />
                         <TextField fx:id="txtApellidoP" />
                      </children>
                   </VBox>
@@ -66,36 +72,47 @@
                   <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <children>
                         <Label text="FECHA DE NACIMIENTO" />
-                        <DatePicker promptText="DD/MM/YYYY" />
+                        <DatePicker fx:id="date" prefHeight="29.0" prefWidth="224.0" promptText="DD/MM/YYYY" />
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <children>
-                        <Label text="CORREO ELECTRONICO" />
-                        <TextField />
+                        <Label text="DOMICILIO" />
+                        <TextField fx:id="txtDomicilio" />
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
                      <children>
-                        <Label text="TELEFONO" />
-                        <TextField />
+                        <Label text="CORREO ELECTRONICO" />
+                        <TextField fx:id="txtCorreo" />
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <children>
+                        <Label text="TELEFONO" />
+                        <TextField fx:id="txtTelefono" />
+                     </children>
+                  </VBox>
+                  <VBox id="vboxDepartamento" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                     <children>
                         <Label text="DEPARTAMENTO" />
-                        <ComboBox prefHeight="25.0" prefWidth="168.0" promptText="MEDICINA GENERAL" />
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="3">
+                     <children>
+                        <Label text="CEDULA" />
+                        <TextField fx:id="txtCedula" />
                      </children>
                   </VBox>
                </children>
             </GridPane>
-            <VBox alignment="CENTER" prefHeight="143.0" prefWidth="600.0" spacing="10.0">
+            <VBox alignment="CENTER" prefHeight="139.0" prefWidth="619.0" spacing="10.0">
                <children>
                   <HBox alignment="CENTER_LEFT" prefHeight="39.0" prefWidth="600.0" spacing="10.0">
                      <children>
                         <Label text="NOMBRE DE USUARIO: " />
                         <TextField fx:id="txtUsuario" />
-                        <Button fx:id="generarUsuario" mnemonicParsing="false" onAction="#generarUsuario" text="GENERAR USUARIO" />
+                        <Button fx:id="generarUsuario" mnemonicParsing="false" onAction="#generarUsuario" style="-fx-border-width: 1px; -fx-background-radius: 5px; -fx-border-radius: 5px;" text="GENERAR USUARIO" />
                      </children>
                   </HBox>
                   <HBox alignment="CENTER_LEFT" prefHeight="47.0" prefWidth="600.0" spacing="10.0">
@@ -105,12 +122,6 @@
                         <Button fx:id="generarPassword" mnemonicParsing="false" onAction="#generarPass" text="GENERAR CONTRASEÑA" />
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER" prefHeight="33.0" prefWidth="600.0" spacing="10.0">
-                     <children>
-                        <Label text="SELECCIONAR ROL: " />
-                        <HBox id="rbtnRol" prefHeight="29.0" prefWidth="341.0" />
-                     </children>
-                  </HBox>
                </children>
                <padding>
                   <Insets left="10.0" right="10.0" top="10.0" />
@@ -118,7 +129,7 @@
             </VBox>
             <HBox alignment="CENTER" prefHeight="63.0" prefWidth="600.0" spacing="10.0">
                <children>
-                  <Button mnemonicParsing="false" text="CREAR USUARIO" />
+                  <Button mnemonicParsing="false" onAction="#subirUsuario" text="CREAR USUARIO" />
                   <Button fx:id="vaciar" mnemonicParsing="false" onAction="#vaciarFormulario" text="VACIAR" />
                   <Button mnemonicParsing="false" onAction="#cerrarVentana" text="CANCELAR" />
                </children>
