--- a/src/main/resources/com/example/syshealthfx/index-admin.fxml
+++ b/src/main/resources/com/example/syshealthfx/index-admin.fxml
@@ -28,14 +28,13 @@
                   </Label>
                   <VBox alignment="TOP_CENTER" prefHeight="543.0" prefWidth="215.0" spacing="15.0">
                      <children>
-                        <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="228.0" style="-fx-alignment: left;" styleClass="btn-aside" text="INICIO">
+                        <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="228.0" styleClass="btn-aside" text="INICIO">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <Button fx:id="usuario" mnemonicParsing="false" onAction="#removerElementos" prefHeight="35.0" prefWidth="222.0" styleClass="btn-aside" text="USUARIOS" />
+                        <Button fx:id="usuario" mnemonicParsing="false" onAction="#removerElementos" prefHeight="35.0" prefWidth="222.0" styleClass="btn-aside" text="DEPARTAMENTOS" />
                         <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="228.0" styleClass="btn-aside" text="PACIENTES" />
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="240.0" styleClass="btn-aside" text="DEPARTAMENTOS" />
                         <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="223.0" styleClass="btn-aside" text="LABORATORIO" />
                         <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="229.0" styleClass="btn-aside" text="CITAS" />
                         <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="230.0" styleClass="btn-aside-cerrar" text="CERRAR SESIÓN" />
@@ -47,7 +46,7 @@
                <children>
                   <HBox prefHeight="98.0" prefWidth="1059.0" styleClass="pane-index">
                      <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="97.0" prefWidth="1037.0" text="BIENVENIDO:  ADMINISTRADOR" textAlignment="CENTER">
+                        <Label id="headerNombre" fx:id="nombreInicio" alignment="CENTER" contentDisplay="CENTER" prefHeight="97.0" prefWidth="1037.0" text="BIENVENIDO:  ADMINISTRADOR" textAlignment="CENTER">
                            <font>
                               <Font name="Cascadia Code Regular" size="30.0" />
                            </font>
