--- a/src/main/resources/com/example/syshealthfx/index-admin.fxml
+++ b/src/main/resources/com/example/syshealthfx/index-admin.fxml
@@ -26,23 +26,23 @@
                         <Font name="Arial Rounded MT Bold" size="12.0" />
                      </font>
                   </Label>
-                  <VBox alignment="TOP_CENTER" prefHeight="543.0" prefWidth="215.0" spacing="15.0">
+                  <VBox fx:id="botonesAside" alignment="TOP_CENTER" prefHeight="543.0" prefWidth="215.0" spacing="15.0">
                      <children>
-                        <Button alignment="BASELINE_LEFT" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="228.0" styleClass="btn-aside" text="INICIO">
+                        <Button id="btnInicio" alignment="BASELINE_LEFT" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="228.0" styleClass="btn-aside" text="INICIO">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Button>
-                        <Button fx:id="usuario" mnemonicParsing="false" onAction="#removerElementos" prefHeight="35.0" prefWidth="222.0" styleClass="btn-aside" text="DEPARTAMENTOS" />
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="228.0" styleClass="btn-aside" text="PACIENTES" />
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="223.0" styleClass="btn-aside" text="LABORATORIO" />
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="229.0" styleClass="btn-aside" text="CITAS" />
-                        <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="230.0" styleClass="btn-aside-cerrar" text="CERRAR SESIÓN" />
+                        <Button id="btnDepartamentos" fx:id="usuario" mnemonicParsing="false" prefHeight="35.0" prefWidth="222.0" styleClass="btn-aside" text="DEPARTAMENTOS" />
+                        <Button id="btnPacientes" mnemonicParsing="false" prefHeight="35.0" prefWidth="228.0" styleClass="btn-aside" text="PACIENTES" />
+                        <Button id="btnLaboratorio" mnemonicParsing="false" prefHeight="35.0" prefWidth="223.0" styleClass="btn-aside" text="LABORATORIO" />
+                        <Button id="btnCitas" mnemonicParsing="false" prefHeight="35.0" prefWidth="229.0" styleClass="btn-aside" text="CITAS" />
+                        <Button id="btnCerrarSesion" mnemonicParsing="false" prefHeight="35.0" prefWidth="230.0" styleClass="btn-aside-cerrar" text="CERRAR SESIÓN" />
                      </children>
                   </VBox>
                </children>
             </VBox>
-            <VBox fx:id="contenidoInicio" alignment="BASELINE_CENTER" prefHeight="650.0" prefWidth="1069.0" spacing="10.0" styleClass="main-index">
+            <VBox id="contenidoInicio" fx:id="contenidoInicio" alignment="BASELINE_CENTER" prefHeight="650.0" prefWidth="1069.0" spacing="10.0" styleClass="main-index">
                <children>
                   <HBox prefHeight="98.0" prefWidth="1059.0" styleClass="pane-index">
                      <children>
@@ -79,12 +79,12 @@
                         </HBox>
                         <HBox prefHeight="100.0" prefWidth="200.0" styleClass="panel-acceso" GridPane.columnIndex="1">
                            <children>
-                              <ImageView fitHeight="76.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="54.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@assets/edificio-del-hospital.png" />
                                  </image>
                               </ImageView>
-                              <Label prefHeight="119.0" prefWidth="205.0" text="ASIGNAR DEPARTAMENTO">
+                              <Label prefHeight="131.0" prefWidth="229.0" text="REGISTRAR DEPARTAMENTO">
                                  <font>
                                     <Font size="1.0" />
                                  </font>
